add default directory

--- a/code/Python_module_11.ipynb
+++ b/code/Python_module_11.ipynb
@@ -8,8 +8,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Theory\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:/Users/Yarik/OneDrive/Рабочий стол/python_modules/Python_module_11'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# задаем дефолтную директорию локального репозитория\n",
+    "import os\n",
+    "data_path = os.path.dirname(os.getcwd())\n",
+    "data_path = data_path.replace('\\\\', '/')\n",
+    "display(data_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -388,9 +418,10 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "data_set = str(r'C:\\Users\\Yarik\\OneDrive\\Рабочий стол\\python_modules\\Python_module_11\\CSVs\\melb_data_ps.csv').replace('\\\\', '/')\n",
-    "melb_data = pd.read_csv(data_set, sep=',')\n",
-    "display(melb_data)"
+    "\n",
+    "melb_data = pd.read_csv(data_path + '/CSVs/melb_data_ps.csv', sep=',')\n",
+    "display(melb_data)\n",
+    "\n"
    ]
   }
  ],
