--- a/code/Python_module_11.ipynb
+++ b/code/Python_module_11.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -105,8 +105,8 @@
        "      <td>126.0</td>\n",
        "      <td>1970</td>\n",
        "      <td>Yarra</td>\n",
-       "      <td>-37.79960</td>\n",
-       "      <td>144.99840</td>\n",
+       "      <td>-37.7996</td>\n",
+       "      <td>144.9984</td>\n",
        "      <td>Northern Metropolitan</td>\n",
        "      <td>4019</td>\n",
        "      <td>-37.7996, 144.9984</td>\n",
@@ -129,8 +129,8 @@
        "      <td>79.0</td>\n",
        "      <td>1900</td>\n",
        "      <td>Yarra</td>\n",
-       "      <td>-37.80790</td>\n",
-       "      <td>144.99340</td>\n",
+       "      <td>-37.8079</td>\n",
+       "      <td>144.9934</td>\n",
        "      <td>Northern Metropolitan</td>\n",
        "      <td>4019</td>\n",
        "      <td>-37.8079, 144.9934</td>\n",
@@ -153,8 +153,8 @@
        "      <td>150.0</td>\n",
        "      <td>1900</td>\n",
        "      <td>Yarra</td>\n",
-       "      <td>-37.80930</td>\n",
-       "      <td>144.99440</td>\n",
+       "      <td>-37.8093</td>\n",
+       "      <td>144.9944</td>\n",
        "      <td>Northern Metropolitan</td>\n",
        "      <td>4019</td>\n",
        "      <td>-37.8093, 144.9944</td>\n",
@@ -177,8 +177,8 @@
        "      <td>126.0</td>\n",
        "      <td>1970</td>\n",
        "      <td>Yarra</td>\n",
-       "      <td>-37.79690</td>\n",
-       "      <td>144.99690</td>\n",
+       "      <td>-37.7969</td>\n",
+       "      <td>144.9969</td>\n",
        "      <td>Northern Metropolitan</td>\n",
        "      <td>4019</td>\n",
        "      <td>-37.7969, 144.9969</td>\n",
@@ -201,215 +201,71 @@
        "      <td>142.0</td>\n",
        "      <td>2014</td>\n",
        "      <td>Yarra</td>\n",
-       "      <td>-37.80720</td>\n",
-       "      <td>144.99410</td>\n",
+       "      <td>-37.8072</td>\n",
+       "      <td>144.9941</td>\n",
        "      <td>Northern Metropolitan</td>\n",
        "      <td>4019</td>\n",
        "      <td>-37.8072, 144.9941</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13575</th>\n",
-       "      <td>13575</td>\n",
-       "      <td>Wheelers Hill</td>\n",
-       "      <td>12 Strada Cr</td>\n",
-       "      <td>4</td>\n",
-       "      <td>h</td>\n",
-       "      <td>1245000.0</td>\n",
-       "      <td>S</td>\n",
-       "      <td>Barry</td>\n",
-       "      <td>26/08/2017</td>\n",
-       "      <td>16.7</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>652.0</td>\n",
-       "      <td>126.0</td>\n",
-       "      <td>1981</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-37.90562</td>\n",
-       "      <td>145.16761</td>\n",
-       "      <td>South-Eastern Metropolitan</td>\n",
-       "      <td>7392</td>\n",
-       "      <td>-37.90562, 145.16761</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13576</th>\n",
-       "      <td>13576</td>\n",
-       "      <td>Williamstown</td>\n",
-       "      <td>77 Merrett Dr</td>\n",
-       "      <td>3</td>\n",
-       "      <td>h</td>\n",
-       "      <td>1031000.0</td>\n",
-       "      <td>SP</td>\n",
-       "      <td>Williams</td>\n",
-       "      <td>26/08/2017</td>\n",
-       "      <td>6.8</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>333.0</td>\n",
-       "      <td>133.0</td>\n",
-       "      <td>1995</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-37.85927</td>\n",
-       "      <td>144.87904</td>\n",
-       "      <td>Western Metropolitan</td>\n",
-       "      <td>6380</td>\n",
-       "      <td>-37.85927, 144.87904</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13577</th>\n",
-       "      <td>13577</td>\n",
-       "      <td>Williamstown</td>\n",
-       "      <td>83 Power St</td>\n",
-       "      <td>3</td>\n",
-       "      <td>h</td>\n",
-       "      <td>1170000.0</td>\n",
-       "      <td>S</td>\n",
-       "      <td>Raine</td>\n",
-       "      <td>26/08/2017</td>\n",
-       "      <td>6.8</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>436.0</td>\n",
-       "      <td>126.0</td>\n",
-       "      <td>1997</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-37.85274</td>\n",
-       "      <td>144.88738</td>\n",
-       "      <td>Western Metropolitan</td>\n",
-       "      <td>6380</td>\n",
-       "      <td>-37.85274, 144.88738</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13578</th>\n",
-       "      <td>13578</td>\n",
-       "      <td>Williamstown</td>\n",
-       "      <td>96 Verdon St</td>\n",
-       "      <td>4</td>\n",
-       "      <td>h</td>\n",
-       "      <td>2500000.0</td>\n",
-       "      <td>PI</td>\n",
-       "      <td>Sweeney</td>\n",
-       "      <td>26/08/2017</td>\n",
-       "      <td>6.8</td>\n",
-       "      <td>...</td>\n",
-       "      <td>5</td>\n",
-       "      <td>866.0</td>\n",
-       "      <td>157.0</td>\n",
-       "      <td>1920</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-37.85908</td>\n",
-       "      <td>144.89299</td>\n",
-       "      <td>Western Metropolitan</td>\n",
-       "      <td>6380</td>\n",
-       "      <td>-37.85908, 144.89299</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13579</th>\n",
-       "      <td>13579</td>\n",
-       "      <td>Yarraville</td>\n",
-       "      <td>6 Agnes St</td>\n",
-       "      <td>4</td>\n",
-       "      <td>h</td>\n",
-       "      <td>1285000.0</td>\n",
-       "      <td>SP</td>\n",
-       "      <td>Village</td>\n",
-       "      <td>26/08/2017</td>\n",
-       "      <td>6.3</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>362.0</td>\n",
-       "      <td>112.0</td>\n",
-       "      <td>1920</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-37.81188</td>\n",
-       "      <td>144.88449</td>\n",
-       "      <td>Western Metropolitan</td>\n",
-       "      <td>6543</td>\n",
-       "      <td>-37.81188, 144.88449</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>13580 rows × 23 columns</p>\n",
+       "<p>5 rows × 23 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       index         Suburb           Address  Rooms Type      Price Method  \\\n",
-       "0          0     Abbotsford      85 Turner St      2    h  1480000.0      S   \n",
-       "1          1     Abbotsford   25 Bloomburg St      2    h  1035000.0      S   \n",
-       "2          2     Abbotsford      5 Charles St      3    h  1465000.0     SP   \n",
-       "3          3     Abbotsford  40 Federation La      3    h   850000.0     PI   \n",
-       "4          4     Abbotsford       55a Park St      4    h  1600000.0     VB   \n",
-       "...      ...            ...               ...    ...  ...        ...    ...   \n",
-       "13575  13575  Wheelers Hill      12 Strada Cr      4    h  1245000.0      S   \n",
-       "13576  13576   Williamstown     77 Merrett Dr      3    h  1031000.0     SP   \n",
-       "13577  13577   Williamstown       83 Power St      3    h  1170000.0      S   \n",
-       "13578  13578   Williamstown      96 Verdon St      4    h  2500000.0     PI   \n",
-       "13579  13579     Yarraville        6 Agnes St      4    h  1285000.0     SP   \n",
+       "   index      Suburb           Address  Rooms Type      Price Method SellerG  \\\n",
+       "0      0  Abbotsford      85 Turner St      2    h  1480000.0      S  Biggin   \n",
+       "1      1  Abbotsford   25 Bloomburg St      2    h  1035000.0      S  Biggin   \n",
+       "2      2  Abbotsford      5 Charles St      3    h  1465000.0     SP  Biggin   \n",
+       "3      3  Abbotsford  40 Federation La      3    h   850000.0     PI  Biggin   \n",
+       "4      4  Abbotsford       55a Park St      4    h  1600000.0     VB  Nelson   \n",
        "\n",
-       "        SellerG        Date  Distance  ...  Car  Landsize  BuildingArea  \\\n",
-       "0        Biggin   3/12/2016       2.5  ...    1     202.0         126.0   \n",
-       "1        Biggin   4/02/2016       2.5  ...    0     156.0          79.0   \n",
-       "2        Biggin   4/03/2017       2.5  ...    0     134.0         150.0   \n",
-       "3        Biggin   4/03/2017       2.5  ...    1      94.0         126.0   \n",
-       "4        Nelson   4/06/2016       2.5  ...    2     120.0         142.0   \n",
-       "...         ...         ...       ...  ...  ...       ...           ...   \n",
-       "13575     Barry  26/08/2017      16.7  ...    2     652.0         126.0   \n",
-       "13576  Williams  26/08/2017       6.8  ...    2     333.0         133.0   \n",
-       "13577     Raine  26/08/2017       6.8  ...    4     436.0         126.0   \n",
-       "13578   Sweeney  26/08/2017       6.8  ...    5     866.0         157.0   \n",
-       "13579   Village  26/08/2017       6.3  ...    1     362.0         112.0   \n",
+       "        Date  Distance  ...  Car  Landsize  BuildingArea  YearBuilt  \\\n",
+       "0  3/12/2016       2.5  ...    1     202.0         126.0       1970   \n",
+       "1  4/02/2016       2.5  ...    0     156.0          79.0       1900   \n",
+       "2  4/03/2017       2.5  ...    0     134.0         150.0       1900   \n",
+       "3  4/03/2017       2.5  ...    1      94.0         126.0       1970   \n",
+       "4  4/06/2016       2.5  ...    2     120.0         142.0       2014   \n",
        "\n",
-       "       YearBuilt  CouncilArea  Lattitude  Longtitude  \\\n",
-       "0           1970        Yarra  -37.79960   144.99840   \n",
-       "1           1900        Yarra  -37.80790   144.99340   \n",
-       "2           1900        Yarra  -37.80930   144.99440   \n",
-       "3           1970        Yarra  -37.79690   144.99690   \n",
-       "4           2014        Yarra  -37.80720   144.99410   \n",
-       "...          ...          ...        ...         ...   \n",
-       "13575       1981          NaN  -37.90562   145.16761   \n",
-       "13576       1995          NaN  -37.85927   144.87904   \n",
-       "13577       1997          NaN  -37.85274   144.88738   \n",
-       "13578       1920          NaN  -37.85908   144.89299   \n",
-       "13579       1920          NaN  -37.81188   144.88449   \n",
+       "   CouncilArea  Lattitude  Longtitude             Regionname  Propertycount  \\\n",
+       "0        Yarra   -37.7996    144.9984  Northern Metropolitan           4019   \n",
+       "1        Yarra   -37.8079    144.9934  Northern Metropolitan           4019   \n",
+       "2        Yarra   -37.8093    144.9944  Northern Metropolitan           4019   \n",
+       "3        Yarra   -37.7969    144.9969  Northern Metropolitan           4019   \n",
+       "4        Yarra   -37.8072    144.9941  Northern Metropolitan           4019   \n",
        "\n",
-       "                       Regionname  Propertycount           Coordinates  \n",
-       "0           Northern Metropolitan           4019    -37.7996, 144.9984  \n",
-       "1           Northern Metropolitan           4019    -37.8079, 144.9934  \n",
-       "2           Northern Metropolitan           4019    -37.8093, 144.9944  \n",
-       "3           Northern Metropolitan           4019    -37.7969, 144.9969  \n",
-       "4           Northern Metropolitan           4019    -37.8072, 144.9941  \n",
-       "...                           ...            ...                   ...  \n",
-       "13575  South-Eastern Metropolitan           7392  -37.90562, 145.16761  \n",
-       "13576        Western Metropolitan           6380  -37.85927, 144.87904  \n",
-       "13577        Western Metropolitan           6380  -37.85274, 144.88738  \n",
-       "13578        Western Metropolitan           6380  -37.85908, 144.89299  \n",
-       "13579        Western Metropolitan           6543  -37.81188, 144.88449  \n",
+       "          Coordinates  \n",
+       "0  -37.7996, 144.9984  \n",
+       "1  -37.8079, 144.9934  \n",
+       "2  -37.8093, 144.9944  \n",
+       "3  -37.7969, 144.9969  \n",
+       "4  -37.8072, 144.9941  \n",
        "\n",
-       "[13580 rows x 23 columns]"
+       "[5 rows x 23 columns]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "melb_data = pd.read_csv(data_path + '/CSVs/melb_data_ps.csv', sep=',')\n",
+    "melb_data.head()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
       ]
      },
      "metadata": {},
@@ -417,11 +273,165 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
+    "melb_df = melb_data.copy()\n",
+    "melb_df = melb_df.drop(['index', 'Coordinates'], axis=1, inplace=False) #cols removement\n",
     "\n",
-    "melb_data = pd.read_csv(data_path + '/CSVs/melb_data_ps.csv', sep=',')\n",
-    "display(melb_data)\n",
-    "\n"
+    "\n",
+    "total_rooms = melb_df['Bathroom'] + melb_df['Bedroom'] + melb_df['Rooms']\n",
+    "\n",
+    "melb_df['MeanRoomsArea'] = melb_df['BuildingArea']/total_rooms\n",
+    "\n",
+    "\n",
+    "diff_area = melb_df['BuildingArea'] - melb_df['Landsize']\n",
+    "sum_area = melb_df['BuildingArea'] + melb_df['Landsize']\n",
+    "melb_df['AreaRatio'] = diff_area/sum_area\n",
+    "melb_df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Задание 3.3 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cust_age</th>\n",
+       "      <th>cust_sale</th>\n",
+       "      <th>cust_year_birth</th>\n",
+       "      <th>cust_order</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>13</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>1400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>21</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>14142</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>19</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>21</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>1240</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>60</td>\n",
+       "      <td>0.30</td>\n",
+       "      <td>1961</td>\n",
+       "      <td>8430</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   cust_age  cust_sale  cust_year_birth  cust_order\n",
+       "0        13       0.00             2008        1400\n",
+       "1        21       0.00             2000       14142\n",
+       "2        19       0.20             2002         900\n",
+       "3        21       0.15             2000        1240\n",
+       "4        60       0.30             1961        8430"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "customer_df = pd.DataFrame({\n",
+    "        'number': [0, 1, 2, 3, 4],\n",
+    "        'cust_id': [128, 1201, 9832, 4392, 7472],\n",
+    "        'cust_age': [13, 21, 19, 21, 60],\n",
+    "        'cust_sale': [0, 0, 0.2, 0.15, 0.3],\n",
+    "        'cust_year_birth': [2008, 2000, 2002, 2000, 1961],\n",
+    "        'cust_order': [1400, 14142, 900, 1240, 8430]\n",
+    "    })\n",
+    "\n",
+    "\n",
+    "\n",
+    "def delete_columns(df, col):\n",
+    "    for i in col:\n",
+    "        if i in list(df.columns):\n",
+    "            df.drop([i], axis=1, inplace=True)\n",
+    "        else: return\n",
+    "    return df\n",
+    "\n",
+    "    \n",
+    "\n",
+    "display(delete_columns( col = ['number', 'cust_id'], df=customer_df))    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(84.93080566562001)"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# задание 3.4\n",
+    "\n",
+    "countries_df = pd.DataFrame({\n",
+    "    'country': ['Англия', 'Канада', 'США', 'Россия', 'Украина', 'Беларусь', 'Казахстан'],\n",
+    "    'population': [56.29, 38.05, 322.28, 146.24, 45.5, 9.5, 17.04],\n",
+    "    'area': [133396, 9984670, 9826630, 17125191, 603628, 207600, 2724902]\n",
+    "})\n",
+    "\n",
+    "\n",
+    "countries_df['mean_population'] = countries_df['population'] * 10**6/countries_df['area']\n",
+    "countries_df['mean_population'].mean()"
    ]
   }
  ],
