--- a/code/Python_module_11.ipynb
+++ b/code/Python_module_11.ipynb
@@ -16,13 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'C:/Users/Yarik/OneDrive/Рабочий стол/python_modules/Python_module_11'"
+       "'c:/Users/Yarik/OneDrive/Рабочий стол/python_modules/Python_module_11'"
       ]
      },
      "metadata": {},
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +463,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +700,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -876,377 +876,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Suburb</th>\n",
-       "      <th>Address</th>\n",
-       "      <th>Rooms</th>\n",
-       "      <th>Type</th>\n",
-       "      <th>Price</th>\n",
-       "      <th>Method</th>\n",
-       "      <th>SellerG</th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Distance</th>\n",
-       "      <th>Postcode</th>\n",
-       "      <th>...</th>\n",
-       "      <th>CouncilArea</th>\n",
-       "      <th>Lattitude</th>\n",
-       "      <th>Longtitude</th>\n",
-       "      <th>Regionname</th>\n",
-       "      <th>Propertycount</th>\n",
-       "      <th>MeanRoomsArea</th>\n",
-       "      <th>AreaRatio</th>\n",
-       "      <th>MonthSale</th>\n",
-       "      <th>AgeBuilding</th>\n",
-       "      <th>WeekdaySale</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>Abbotsford</td>\n",
-       "      <td>47 Studley St</td>\n",
-       "      <td>2</td>\n",
-       "      <td>h</td>\n",
-       "      <td>1180000.0</td>\n",
-       "      <td>S</td>\n",
-       "      <td>Jellis</td>\n",
-       "      <td>2016-11-27</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>3067</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Yarra</td>\n",
-       "      <td>-37.80160</td>\n",
-       "      <td>144.99560</td>\n",
-       "      <td>Northern Metropolitan</td>\n",
-       "      <td>4019</td>\n",
-       "      <td>18.200000</td>\n",
-       "      <td>-0.280632</td>\n",
-       "      <td>11</td>\n",
-       "      <td>116</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>Abbotsford</td>\n",
-       "      <td>45 Yarra St</td>\n",
-       "      <td>3</td>\n",
-       "      <td>h</td>\n",
-       "      <td>1195000.0</td>\n",
-       "      <td>SP</td>\n",
-       "      <td>Jellis</td>\n",
-       "      <td>2016-11-27</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>3067</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Yarra</td>\n",
-       "      <td>-37.80220</td>\n",
-       "      <td>144.99540</td>\n",
-       "      <td>Northern Metropolitan</td>\n",
-       "      <td>4019</td>\n",
-       "      <td>16.000000</td>\n",
-       "      <td>0.032258</td>\n",
-       "      <td>11</td>\n",
-       "      <td>18</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>69</th>\n",
-       "      <td>Airport West</td>\n",
-       "      <td>10 Hilbert Rd</td>\n",
-       "      <td>3</td>\n",
-       "      <td>h</td>\n",
-       "      <td>685000.0</td>\n",
-       "      <td>S</td>\n",
-       "      <td>Barry</td>\n",
-       "      <td>2016-05-22</td>\n",
-       "      <td>13.5</td>\n",
-       "      <td>3042</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Moonee Valley</td>\n",
-       "      <td>-37.72260</td>\n",
-       "      <td>144.87330</td>\n",
-       "      <td>Western Metropolitan</td>\n",
-       "      <td>3464</td>\n",
-       "      <td>16.142857</td>\n",
-       "      <td>-0.673410</td>\n",
-       "      <td>5</td>\n",
-       "      <td>41</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>76</th>\n",
-       "      <td>Airport West</td>\n",
-       "      <td>49 Roberts Rd</td>\n",
-       "      <td>4</td>\n",
-       "      <td>h</td>\n",
-       "      <td>765000.0</td>\n",
-       "      <td>S</td>\n",
-       "      <td>Prof.</td>\n",
-       "      <td>2016-11-27</td>\n",
-       "      <td>13.5</td>\n",
-       "      <td>3042</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Moonee Valley</td>\n",
-       "      <td>-37.72610</td>\n",
-       "      <td>144.87850</td>\n",
-       "      <td>Western Metropolitan</td>\n",
-       "      <td>3464</td>\n",
-       "      <td>14.000000</td>\n",
-       "      <td>-0.603150</td>\n",
-       "      <td>11</td>\n",
-       "      <td>46</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>77</th>\n",
-       "      <td>Airport West</td>\n",
-       "      <td>85 Roberts Rd</td>\n",
-       "      <td>4</td>\n",
-       "      <td>h</td>\n",
-       "      <td>900000.0</td>\n",
-       "      <td>S</td>\n",
-       "      <td>Harcourts</td>\n",
-       "      <td>2016-11-27</td>\n",
-       "      <td>13.5</td>\n",
-       "      <td>3042</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Moonee Valley</td>\n",
-       "      <td>-37.72560</td>\n",
-       "      <td>144.87390</td>\n",
-       "      <td>Western Metropolitan</td>\n",
-       "      <td>3464</td>\n",
-       "      <td>14.600000</td>\n",
-       "      <td>-0.622739</td>\n",
-       "      <td>11</td>\n",
-       "      <td>41</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12422</th>\n",
-       "      <td>Wheelers Hill</td>\n",
-       "      <td>17 Highwood Dr</td>\n",
-       "      <td>5</td>\n",
-       "      <td>h</td>\n",
-       "      <td>1206000.0</td>\n",
-       "      <td>S</td>\n",
-       "      <td>Fletchers</td>\n",
-       "      <td>2017-09-03</td>\n",
-       "      <td>16.7</td>\n",
-       "      <td>3150</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-37.89856</td>\n",
-       "      <td>145.17682</td>\n",
-       "      <td>South-Eastern Metropolitan</td>\n",
-       "      <td>7392</td>\n",
-       "      <td>10.500000</td>\n",
-       "      <td>-0.723077</td>\n",
-       "      <td>9</td>\n",
-       "      <td>47</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12423</th>\n",
-       "      <td>Wheelers Hill</td>\n",
-       "      <td>6 The Woodland</td>\n",
-       "      <td>4</td>\n",
-       "      <td>h</td>\n",
-       "      <td>1678000.0</td>\n",
-       "      <td>S</td>\n",
-       "      <td>Harcourts</td>\n",
-       "      <td>2017-09-03</td>\n",
-       "      <td>16.7</td>\n",
-       "      <td>3150</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-37.90306</td>\n",
-       "      <td>145.18171</td>\n",
-       "      <td>South-Eastern Metropolitan</td>\n",
-       "      <td>7392</td>\n",
-       "      <td>12.600000</td>\n",
-       "      <td>-0.764266</td>\n",
-       "      <td>9</td>\n",
-       "      <td>47</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12424</th>\n",
-       "      <td>Williamstown</td>\n",
-       "      <td>48 Smith Av</td>\n",
-       "      <td>4</td>\n",
-       "      <td>h</td>\n",
-       "      <td>1630000.0</td>\n",
-       "      <td>S</td>\n",
-       "      <td>Williams</td>\n",
-       "      <td>2017-09-03</td>\n",
-       "      <td>6.8</td>\n",
-       "      <td>3016</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-37.86338</td>\n",
-       "      <td>144.88322</td>\n",
-       "      <td>Western Metropolitan</td>\n",
-       "      <td>6380</td>\n",
-       "      <td>11.454545</td>\n",
-       "      <td>-0.520913</td>\n",
-       "      <td>9</td>\n",
-       "      <td>47</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12425</th>\n",
-       "      <td>Windsor</td>\n",
-       "      <td>20 Atkinson Cl</td>\n",
-       "      <td>3</td>\n",
-       "      <td>t</td>\n",
-       "      <td>1525000.0</td>\n",
-       "      <td>PI</td>\n",
-       "      <td>Marshall</td>\n",
-       "      <td>2017-09-03</td>\n",
-       "      <td>4.6</td>\n",
-       "      <td>3181</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-37.85670</td>\n",
-       "      <td>144.99665</td>\n",
-       "      <td>Southern Metropolitan</td>\n",
-       "      <td>4380</td>\n",
-       "      <td>15.750000</td>\n",
-       "      <td>-0.086957</td>\n",
-       "      <td>9</td>\n",
-       "      <td>47</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12426</th>\n",
-       "      <td>Yarraville</td>\n",
-       "      <td>54 Sussex St</td>\n",
-       "      <td>3</td>\n",
-       "      <td>h</td>\n",
-       "      <td>890000.0</td>\n",
-       "      <td>VB</td>\n",
-       "      <td>Jas</td>\n",
-       "      <td>2017-09-03</td>\n",
-       "      <td>6.3</td>\n",
-       "      <td>3013</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-37.81950</td>\n",
-       "      <td>144.88908</td>\n",
-       "      <td>Western Metropolitan</td>\n",
-       "      <td>6543</td>\n",
-       "      <td>17.571429</td>\n",
-       "      <td>-0.466377</td>\n",
-       "      <td>9</td>\n",
-       "      <td>111</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1063 rows × 25 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "              Suburb         Address  Rooms Type      Price Method    SellerG  \\\n",
-       "34        Abbotsford   47 Studley St      2    h  1180000.0      S     Jellis   \n",
-       "35        Abbotsford     45 Yarra St      3    h  1195000.0     SP     Jellis   \n",
-       "69      Airport West   10 Hilbert Rd      3    h   685000.0      S      Barry   \n",
-       "76      Airport West   49 Roberts Rd      4    h   765000.0      S      Prof.   \n",
-       "77      Airport West   85 Roberts Rd      4    h   900000.0      S  Harcourts   \n",
-       "...              ...             ...    ...  ...        ...    ...        ...   \n",
-       "12422  Wheelers Hill  17 Highwood Dr      5    h  1206000.0      S  Fletchers   \n",
-       "12423  Wheelers Hill  6 The Woodland      4    h  1678000.0      S  Harcourts   \n",
-       "12424   Williamstown     48 Smith Av      4    h  1630000.0      S   Williams   \n",
-       "12425        Windsor  20 Atkinson Cl      3    t  1525000.0     PI   Marshall   \n",
-       "12426     Yarraville    54 Sussex St      3    h   890000.0     VB        Jas   \n",
-       "\n",
-       "            Date  Distance  Postcode  ...    CouncilArea  Lattitude  \\\n",
-       "34    2016-11-27       2.5      3067  ...          Yarra  -37.80160   \n",
-       "35    2016-11-27       2.5      3067  ...          Yarra  -37.80220   \n",
-       "69    2016-05-22      13.5      3042  ...  Moonee Valley  -37.72260   \n",
-       "76    2016-11-27      13.5      3042  ...  Moonee Valley  -37.72610   \n",
-       "77    2016-11-27      13.5      3042  ...  Moonee Valley  -37.72560   \n",
-       "...          ...       ...       ...  ...            ...        ...   \n",
-       "12422 2017-09-03      16.7      3150  ...            NaN  -37.89856   \n",
-       "12423 2017-09-03      16.7      3150  ...            NaN  -37.90306   \n",
-       "12424 2017-09-03       6.8      3016  ...            NaN  -37.86338   \n",
-       "12425 2017-09-03       4.6      3181  ...            NaN  -37.85670   \n",
-       "12426 2017-09-03       6.3      3013  ...            NaN  -37.81950   \n",
-       "\n",
-       "       Longtitude                  Regionname  Propertycount MeanRoomsArea  \\\n",
-       "34      144.99560       Northern Metropolitan           4019     18.200000   \n",
-       "35      144.99540       Northern Metropolitan           4019     16.000000   \n",
-       "69      144.87330        Western Metropolitan           3464     16.142857   \n",
-       "76      144.87850        Western Metropolitan           3464     14.000000   \n",
-       "77      144.87390        Western Metropolitan           3464     14.600000   \n",
-       "...           ...                         ...            ...           ...   \n",
-       "12422   145.17682  South-Eastern Metropolitan           7392     10.500000   \n",
-       "12423   145.18171  South-Eastern Metropolitan           7392     12.600000   \n",
-       "12424   144.88322        Western Metropolitan           6380     11.454545   \n",
-       "12425   144.99665       Southern Metropolitan           4380     15.750000   \n",
-       "12426   144.88908        Western Metropolitan           6543     17.571429   \n",
-       "\n",
-       "       AreaRatio  MonthSale AgeBuilding  WeekdaySale  \n",
-       "34     -0.280632         11         116            6  \n",
-       "35      0.032258         11          18            6  \n",
-       "69     -0.673410          5          41            6  \n",
-       "76     -0.603150         11          46            6  \n",
-       "77     -0.622739         11          41            6  \n",
-       "...          ...        ...         ...          ...  \n",
-       "12422  -0.723077          9          47            6  \n",
-       "12423  -0.764266          9          47            6  \n",
-       "12424  -0.520913          9          47            6  \n",
-       "12425  -0.086957          9          47            6  \n",
-       "12426  -0.466377          9         111            6  \n",
-       "\n",
-       "[1063 rows x 25 columns]"
+       "12822"
       ]
      },
      "metadata": {},
@@ -1261,8 +897,53 @@
     "sunday = melb_df['WeekdaySale'] == 6\n",
     "saturday = melb_df['WeekdaySale'] == 5\n",
     "\n",
-    "weekend_count = melb_df[sunday] \n",
-    "display(weekend_count)"
+    "weekend_count = melb_df[sunday|saturday] \n",
+    "display(weekend_count.shape[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int32(1999)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(68.92932862190813)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "\n",
+    "ufo_data = pd.read_csv(data_path + '/CSVs/UFO.csv', sep=',') # подгружаем UFO-data\n",
+    "\n",
+    "# задание 4.4\n",
+    "ufo_data['Time'] = pd.to_datetime(ufo_data['Time'])\n",
+    "ufo_year = ufo_data['Time'].dt.year.mode()[0]\n",
+    "display(ufo_year)\n",
+    "\n",
+    "# задание 4.5\n",
+    "\n",
+    "Nevada_ufo = ufo_data[ufo_data['State'] == 'NV'] # выделяем из UFO-data те что относятся к NV\n",
+    "NV_ufo_copy = Nevada_ufo.copy() # создаем копию данных, чтобы программа не возмущалась\n",
+    "\n",
+    "NV_ufo_copy['Time'] = NV_ufo_copy['Time'].dt.date\n",
+    "NV_ufo_copy['Difference'] = NV_ufo_copy['Time'].diff()\n",
+    "NV_ufo_copy['Difference'] = NV_ufo_copy['Difference'].dt.days\n",
+    "\n",
+    "display(NV_ufo_copy['Difference'].mean())"
    ]
   }
  ],
