--- a/code/Python_module_11.ipynb
+++ b/code/Python_module_11.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 360,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 361,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 361,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 362,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +463,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 362,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 363,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +700,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 363,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,6 +729,132 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 364,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13378"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "56"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 364,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "display(melb_df['Address'].nunique())\n",
+    "\n",
+    "\n",
+    "def get_street_type(address):\n",
+    "    exclude_lst = ['N', 'S', 'E', 'W']\n",
+    "    \n",
+    "    address_lst = address.split(' ')\n",
+    "    if address_lst[-1] in exclude_lst:\n",
+    "        \n",
+    "        return address_lst[-2]\n",
+    "    else:\n",
+    "        return address_lst[-1]\n",
+    "        \n",
+    "melb_df['Address'] = melb_df['Address'].apply(get_street_type)\n",
+    "\n",
+    "\n",
+    "display(melb_df['Address'].nunique())\n",
+    "\n",
+    "\n",
+    "def change_adress(string):\n",
+    "    \n",
+    "    alt_dict = {\n",
+    "                'Av_alt' : ['Avenue', 'Ave'],\n",
+    "                'Cr_alt' : ['Crescent'],\n",
+    "                'Bvd_alt' : ['Boulevard'],\n",
+    "                'Hwy_alt' : ['Highway'], \n",
+    "                'Pde_alt' : ['Parade']\n",
+    "               }\n",
+    "    \n",
+    "    for i in alt_dict:               \n",
+    "        if string in alt_dict[i]:\n",
+    "            key_lst = i.split('_')\n",
+    "            string = key_lst[0]\n",
+    "       \n",
+    "    return string  \n",
+    "\n",
+    "\n",
+    "melb_df['Address'] = melb_df['Address'].apply(change_adress)\n",
+    "\n",
+    "\n",
+    "\n",
+    "melb_df['Address'].value_counts()\n",
+    "melb_df['Address'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 365,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['St', 'Rd', 'Ct', 'Dr', 'Av', 'Gr', 'Pde', 'Pl', 'Cr', 'Cl'], dtype='object', name='Address')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Address\n",
+       "St       8012\n",
+       "Rd       2825\n",
+       "Ct        612\n",
+       "Dr        447\n",
+       "Av        362\n",
+       "other     355\n",
+       "Gr        311\n",
+       "Pde       226\n",
+       "Pl        169\n",
+       "Cr        161\n",
+       "Cl        100\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 365,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "popular_stypes = melb_df['Address'].value_counts().nlargest(10).index\n",
+    "display(popular_stypes)\n",
+    "\n",
+    "melb_df['Address'] = melb_df['Address'].apply(lambda x: x if x in popular_stypes else 'other')\n",
+    "melb_df['Address'].nunique()\n",
+    "melb_df['Address'].value_counts()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -737,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 366,
    "metadata": {},
    "outputs": [
     {
@@ -846,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 367,
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +981,7 @@
        "np.float64(84.93080566562001)"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 367,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -876,13 +1002,218 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 368,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "12822"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Suburb</th>\n",
+       "      <th>Address</th>\n",
+       "      <th>Rooms</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Method</th>\n",
+       "      <th>SellerG</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Distance</th>\n",
+       "      <th>Postcode</th>\n",
+       "      <th>...</th>\n",
+       "      <th>CouncilArea</th>\n",
+       "      <th>Lattitude</th>\n",
+       "      <th>Longtitude</th>\n",
+       "      <th>Regionname</th>\n",
+       "      <th>Propertycount</th>\n",
+       "      <th>MeanRoomsArea</th>\n",
+       "      <th>AreaRatio</th>\n",
+       "      <th>MonthSale</th>\n",
+       "      <th>AgeBuilding</th>\n",
+       "      <th>WeekdaySale</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Abbotsford</td>\n",
+       "      <td>St</td>\n",
+       "      <td>2</td>\n",
+       "      <td>h</td>\n",
+       "      <td>1480000.0</td>\n",
+       "      <td>S</td>\n",
+       "      <td>Biggin</td>\n",
+       "      <td>2016-12-03</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>3067</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Yarra</td>\n",
+       "      <td>-37.7996</td>\n",
+       "      <td>144.9984</td>\n",
+       "      <td>Northern Metropolitan</td>\n",
+       "      <td>4019</td>\n",
+       "      <td>25.20</td>\n",
+       "      <td>-0.231707</td>\n",
+       "      <td>12</td>\n",
+       "      <td>46</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Abbotsford</td>\n",
+       "      <td>St</td>\n",
+       "      <td>2</td>\n",
+       "      <td>h</td>\n",
+       "      <td>1035000.0</td>\n",
+       "      <td>S</td>\n",
+       "      <td>Biggin</td>\n",
+       "      <td>2016-02-04</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>3067</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Yarra</td>\n",
+       "      <td>-37.8079</td>\n",
+       "      <td>144.9934</td>\n",
+       "      <td>Northern Metropolitan</td>\n",
+       "      <td>4019</td>\n",
+       "      <td>15.80</td>\n",
+       "      <td>-0.327660</td>\n",
+       "      <td>2</td>\n",
+       "      <td>116</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Abbotsford</td>\n",
+       "      <td>St</td>\n",
+       "      <td>3</td>\n",
+       "      <td>h</td>\n",
+       "      <td>1465000.0</td>\n",
+       "      <td>SP</td>\n",
+       "      <td>Biggin</td>\n",
+       "      <td>2017-03-04</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>3067</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Yarra</td>\n",
+       "      <td>-37.8093</td>\n",
+       "      <td>144.9944</td>\n",
+       "      <td>Northern Metropolitan</td>\n",
+       "      <td>4019</td>\n",
+       "      <td>18.75</td>\n",
+       "      <td>0.056338</td>\n",
+       "      <td>3</td>\n",
+       "      <td>117</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Abbotsford</td>\n",
+       "      <td>other</td>\n",
+       "      <td>3</td>\n",
+       "      <td>h</td>\n",
+       "      <td>850000.0</td>\n",
+       "      <td>PI</td>\n",
+       "      <td>Biggin</td>\n",
+       "      <td>2017-03-04</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>3067</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Yarra</td>\n",
+       "      <td>-37.7969</td>\n",
+       "      <td>144.9969</td>\n",
+       "      <td>Northern Metropolitan</td>\n",
+       "      <td>4019</td>\n",
+       "      <td>15.75</td>\n",
+       "      <td>0.145455</td>\n",
+       "      <td>3</td>\n",
+       "      <td>47</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Abbotsford</td>\n",
+       "      <td>St</td>\n",
+       "      <td>4</td>\n",
+       "      <td>h</td>\n",
+       "      <td>1600000.0</td>\n",
+       "      <td>VB</td>\n",
+       "      <td>Nelson</td>\n",
+       "      <td>2016-06-04</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>3067</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Yarra</td>\n",
+       "      <td>-37.8072</td>\n",
+       "      <td>144.9941</td>\n",
+       "      <td>Northern Metropolitan</td>\n",
+       "      <td>4019</td>\n",
+       "      <td>17.75</td>\n",
+       "      <td>0.083969</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Suburb Address  Rooms Type      Price Method SellerG       Date  \\\n",
+       "0  Abbotsford      St      2    h  1480000.0      S  Biggin 2016-12-03   \n",
+       "1  Abbotsford      St      2    h  1035000.0      S  Biggin 2016-02-04   \n",
+       "2  Abbotsford      St      3    h  1465000.0     SP  Biggin 2017-03-04   \n",
+       "3  Abbotsford   other      3    h   850000.0     PI  Biggin 2017-03-04   \n",
+       "4  Abbotsford      St      4    h  1600000.0     VB  Nelson 2016-06-04   \n",
+       "\n",
+       "   Distance  Postcode  ...  CouncilArea  Lattitude  Longtitude  \\\n",
+       "0       2.5      3067  ...        Yarra   -37.7996    144.9984   \n",
+       "1       2.5      3067  ...        Yarra   -37.8079    144.9934   \n",
+       "2       2.5      3067  ...        Yarra   -37.8093    144.9944   \n",
+       "3       2.5      3067  ...        Yarra   -37.7969    144.9969   \n",
+       "4       2.5      3067  ...        Yarra   -37.8072    144.9941   \n",
+       "\n",
+       "              Regionname  Propertycount MeanRoomsArea  AreaRatio  MonthSale  \\\n",
+       "0  Northern Metropolitan           4019         25.20  -0.231707         12   \n",
+       "1  Northern Metropolitan           4019         15.80  -0.327660          2   \n",
+       "2  Northern Metropolitan           4019         18.75   0.056338          3   \n",
+       "3  Northern Metropolitan           4019         15.75   0.145455          3   \n",
+       "4  Northern Metropolitan           4019         17.75   0.083969          6   \n",
+       "\n",
+       "  AgeBuilding  WeekdaySale  \n",
+       "0          46            5  \n",
+       "1         116            3  \n",
+       "2         117            5  \n",
+       "3          47            5  \n",
+       "4           2            5  \n",
+       "\n",
+       "[5 rows x 25 columns]"
       ]
      },
      "metadata": {},
@@ -898,12 +1229,14 @@
     "saturday = melb_df['WeekdaySale'] == 5\n",
     "\n",
     "weekend_count = melb_df[sunday|saturday] \n",
-    "display(weekend_count.shape[0])"
+    "display(weekend_count.shape[0])\n",
+    "\n",
+    "display(melb_df.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 371,
    "metadata": {},
    "outputs": [
     {
@@ -944,6 +1277,155 @@
     "NV_ufo_copy['Difference'] = NV_ufo_copy['Difference'].dt.days\n",
     "\n",
     "display(NV_ufo_copy['Difference'].mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 369,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(1081198.6406956792)"
+      ]
+     },
+     "execution_count": 369,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Задание 5.2\n",
+    "melb_df['Weekend'] = melb_df['WeekdaySale'].apply(lambda x: 1 if x >= 5 else 0)\n",
+    "\n",
+    "Weekend_mask = melb_df['Weekend'] == 1\n",
+    "melb_df[Weekend_mask]['Price'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 370,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(1.297709923664122)"
+      ]
+     },
+     "execution_count": 370,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Задание 5.3\n",
+    "top_sellers = melb_df['SellerG'].value_counts().nlargest(49).index\n",
+    "melb_df['SellerG'] = melb_df['SellerG'].apply(lambda x: x if x in top_sellers else 'other')\n",
+    "\n",
+    "display(melb_df['SellerG'].nunique())\n",
+    "\n",
+    "NL_mask = melb_df['SellerG'] == 'Nelson'\n",
+    "other_mask = melb_df['SellerG'] == 'other'\n",
+    "melb_df[NL_mask]['Price'].min() / melb_df[other_mask]['Price'].min() "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Задание 5.4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 401,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "99"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "41"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "21"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "72"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "arg_1 = 'Опыт работы 8 лет 3 месяца'\n",
+    "arg_2 = 'Опыт работы 3 года 5 месяцев'\n",
+    "arg_3 = 'Опыт работы 1 год 9 месяцев'\n",
+    "arg_4 = 'Опыт работы 3 месяца'\n",
+    "arg_5 = 'Опыт работы 6 лет'\n",
+    "\n",
+    "def get_experience(arg):\n",
+    "    count = 0\n",
+    "    arg = arg.split(' ')\n",
+    "    \n",
+    "    if arg[-1].startswith(('л', 'г')):\n",
+    "        count += int(arg[-2])*12   \n",
+    "        \n",
+    "    elif arg[-3].startswith(('л', 'г')):\n",
+    "        count += int(arg[-4])*12 + int(arg[-2])\n",
+    "        \n",
+    "    elif arg[-1].startswith(('мес')):\n",
+    "        count += int(arg[-2])\n",
+    "        \n",
+    "    return count\n",
+    "\n",
+    "    \n",
+    "display(get_experience(arg_1))\n",
+    "display(get_experience(arg_2))\n",
+    "display(get_experience(arg_3))\n",
+    "display(get_experience(arg_4))\n",
+    "display(get_experience(arg_5))"
    ]
   }
  ],
