--- a/code/Python_module_11.ipynb
+++ b/code/Python_module_11.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +463,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +700,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -748,7 +748,7 @@
        "50"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -833,7 +833,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -848,6 +848,90 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['house', 'townhouse', 'unit'], dtype='object')"
+      ]
+     },
+     "execution_count": 184,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unique_list = []\n",
+    "# пробегаемся по именам столбцов в таблице\n",
+    "for col in melb_df.columns:\n",
+    "    # создаём кортеж (имя столбца, число уникальных значений)\n",
+    "    item = (col, melb_df[col].nunique(), melb_df[col].dtypes) \n",
+    "    # добавляем кортеж в список\n",
+    "    unique_list.append(item) \n",
+    "\n",
+    "# создаём вспомогательную таблицу и сортируем её по переменной Num_Unique\n",
+    "unique_counts = pd.DataFrame(\n",
+    "    unique_list,\n",
+    "    columns=['Column_Name', 'Num_Unique', 'Type']\n",
+    "    ).sort_values(by='Num_Unique',  ignore_index=True)\n",
+    "\n",
+    "\n",
+    "#display(unique_counts)\n",
+    "\n",
+    "\n",
+    "cols_to_exclude = ['Date', 'Rooms', 'Bedroom', 'Bathroom', 'Car'] # список столбцов, которые мы не берём во внимание\n",
+    "max_unique_count = 150 # задаём максимальное число уникальных категорий\n",
+    "for col in melb_df.columns: # цикл по именам столбцов\n",
+    "    if melb_df[col].nunique() < max_unique_count and col not in cols_to_exclude: # проверяем условие\n",
+    "        melb_df[col] = melb_df[col].astype('category') # преобразуем тип столбца\n",
+    "#display(melb_df.info())\n",
+    "\n",
+    "#print(melb_df['Regionname'].cat.categories)\n",
+    "#print(melb_df.columns)\n",
+    "\n",
+    "melb_df['Type'] = melb_df['Type'].cat.rename_categories({\n",
+    "    'h' : 'house',\n",
+    "    't' : 'townhouse',\n",
+    "    'u' : 'unit' \n",
+    "})\n",
+    "\n",
+    "melb_df['Type'].cat.categories"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     unit\n",
+       "1    house\n",
+       "2     flat\n",
+       "3     flat\n",
+       "4    house\n",
+       "dtype: category\n",
+       "Categories (4, object): ['house', 'townhouse', 'unit', 'flat']"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "melb_df['Type'] = melb_df['Type'].cat.add_categories('flat') # добавили в переменную Type доп. категорию Flat\n",
+    "\n",
+    "new_houses_types = pd.Series(['unit', 'house', 'flat', 'flat', 'house']) \n",
+    "new_houses_types = new_houses_types.astype(melb_df['Type'].dtype)\n",
+    "\n",
+    "display(new_houses_types)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -856,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
@@ -974,7 +1058,7 @@
        "np.float64(84.93080566562001)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -995,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -1057,7 +1141,7 @@
        "      <td>Abbotsford</td>\n",
        "      <td>St</td>\n",
        "      <td>2</td>\n",
-       "      <td>h</td>\n",
+       "      <td>house</td>\n",
        "      <td>1480000.0</td>\n",
        "      <td>S</td>\n",
        "      <td>Biggin</td>\n",
@@ -1081,7 +1165,7 @@
        "      <td>Abbotsford</td>\n",
        "      <td>St</td>\n",
        "      <td>2</td>\n",
-       "      <td>h</td>\n",
+       "      <td>house</td>\n",
        "      <td>1035000.0</td>\n",
        "      <td>S</td>\n",
        "      <td>Biggin</td>\n",
@@ -1105,7 +1189,7 @@
        "      <td>Abbotsford</td>\n",
        "      <td>St</td>\n",
        "      <td>3</td>\n",
-       "      <td>h</td>\n",
+       "      <td>house</td>\n",
        "      <td>1465000.0</td>\n",
        "      <td>SP</td>\n",
        "      <td>Biggin</td>\n",
@@ -1129,7 +1213,7 @@
        "      <td>Abbotsford</td>\n",
        "      <td>other</td>\n",
        "      <td>3</td>\n",
-       "      <td>h</td>\n",
+       "      <td>house</td>\n",
        "      <td>850000.0</td>\n",
        "      <td>PI</td>\n",
        "      <td>Biggin</td>\n",
@@ -1153,7 +1237,7 @@
        "      <td>Abbotsford</td>\n",
        "      <td>St</td>\n",
        "      <td>4</td>\n",
-       "      <td>h</td>\n",
+       "      <td>house</td>\n",
        "      <td>1600000.0</td>\n",
        "      <td>VB</td>\n",
        "      <td>Nelson</td>\n",
@@ -1178,12 +1262,12 @@
        "</div>"
       ],
       "text/plain": [
-       "       Suburb Address  Rooms Type      Price Method SellerG       Date  \\\n",
-       "0  Abbotsford      St      2    h  1480000.0      S  Biggin 2016-12-03   \n",
-       "1  Abbotsford      St      2    h  1035000.0      S  Biggin 2016-02-04   \n",
-       "2  Abbotsford      St      3    h  1465000.0     SP  Biggin 2017-03-04   \n",
-       "3  Abbotsford   other      3    h   850000.0     PI  Biggin 2017-03-04   \n",
-       "4  Abbotsford      St      4    h  1600000.0     VB  Nelson 2016-06-04   \n",
+       "       Suburb Address  Rooms   Type      Price Method SellerG       Date  \\\n",
+       "0  Abbotsford      St      2  house  1480000.0      S  Biggin 2016-12-03   \n",
+       "1  Abbotsford      St      2  house  1035000.0      S  Biggin 2016-02-04   \n",
+       "2  Abbotsford      St      3  house  1465000.0     SP  Biggin 2017-03-04   \n",
+       "3  Abbotsford   other      3  house   850000.0     PI  Biggin 2017-03-04   \n",
+       "4  Abbotsford      St      4  house  1600000.0     VB  Nelson 2016-06-04   \n",
        "\n",
        "   Distance  Postcode  ...  CouncilArea  Lattitude  Longtitude  \\\n",
        "0       2.5      3067  ...        Yarra   -37.7996    144.9984   \n",
@@ -1229,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -1274,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -1283,7 +1367,7 @@
        "np.float64(1081198.6406956792)"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1298,7 +1382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
@@ -1316,7 +1400,7 @@
        "np.float64(1.297709923664122)"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1343,7 +1427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -1420,6 +1504,66 @@
     "display(get_experience(arg_3))\n",
     "display(get_experience(arg_4))\n",
     "display(get_experience(arg_5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "314"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0          Abbotsford\n",
+       "1          Abbotsford\n",
+       "2          Abbotsford\n",
+       "3          Abbotsford\n",
+       "4          Abbotsford\n",
+       "             ...     \n",
+       "13575           other\n",
+       "13576    Williamstown\n",
+       "13577    Williamstown\n",
+       "13578    Williamstown\n",
+       "13579      Yarraville\n",
+       "Name: Suburb, Length: 13580, dtype: category\n",
+       "Categories (120, object): ['Abbotsford', 'Aberfeldie', 'Airport West', 'Albert Park', ..., 'Williamstown', 'Windsor', 'Yarraville', 'other']"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# задание 6.2\n",
+    "#melb_df.info()\n",
+    "display(melb_df['Suburb'].nunique())\n",
+    "\n",
+    "popular_suburb = melb_df['Suburb'].value_counts().nlargest(119).index\n",
+    "melb_df['Suburb'] = melb_df['Suburb'].apply(lambda x: x if x in popular_suburb else 'other')\n",
+    "\n",
+    "melb_df['Suburb'] = melb_df['Suburb'].astype('category')\n",
+    "\n",
+    "display(melb_df['Suburb'].nunique())\n",
+    "\n",
+    "display(melb_df['Suburb'])"
    ]
   }
  ],
